--- a/Pixed/Controls/FrameListControl.axaml
+++ b/Pixed/Controls/FrameListControl.axaml
@@ -11,7 +11,7 @@
             <Grid.Background>
                 <ImageBrush Source="avares://Pixed/Resources/transparentBackground.png" TileMode="Tile" Stretch="Uniform" AlignmentY="Top" DestinationRect="0 0 32 32"/>
             </Grid.Background>
-            <Image Width="96" Height="96" Source="{Binding RenderSource}"/>
+            <Image Width="96" Height="96" Source="{Binding RenderSource}" RenderOptions.BitmapInterpolationMode="None"/>
         </Grid>
     </Border>
 </UserControl>
