--- a/Pixed/Controls/LayerListControl.axaml
+++ b/Pixed/Controls/LayerListControl.axaml
@@ -8,7 +8,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Orientation="Horizontal">
         <Border BorderBrush="Gray" BorderThickness="1">
-            <Image Width="32" Height="32" Source="{Binding RenderSource}"/>
+            <Image Width="32" Height="32" Source="{Binding RenderSource}" RenderOptions.BitmapInterpolationMode="None"/>
         </Border>
         <TextBlock Text="{Binding Name}" Foreground="White"/>
     </StackPanel>
