--- a/Pixed/Windows/PaletteWindow.axaml
+++ b/Pixed/Windows/PaletteWindow.axaml
@@ -16,40 +16,40 @@
         </Grid.RowDefinitions>
 
         <ScrollViewer Grid.Row="1">
-            <!--<ListView Background="#1D1D1D" ItemsSource="{Binding Palettes}" HorizontalContentAlignment="Stretch">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="20"/>
-                                <RowDefinition Height="20"/>
-                                <RowDefinition Height="auto"/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="40"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding Name}" FontWeight="Bold" Foreground="White" Grid.ColumnSpan="4"/>
-                            <TextBlock Text="{Binding Path}" Foreground="Gray" Grid.ColumnSpan="4" Grid.Row="1"/>
-                            <Image Source="{Binding BitmapImage}" Grid.Row="2"/>
-                            <Button Grid.Column="1" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding SelectCommand}" CommandParameter="{Binding Model}">
-                                
-                                <Image Source="./Resources/Icons/checkmark.png"/>
-                            </Button>
-                            <Button Grid.Column="2" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding RenameCommand}" CommandParameter="{Binding Model}">
-                                
-                                <Image Source="./Resources/Icons/common/pencil.png"/>
-                            </Button>
-                            <Button Grid.Column="3" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding RemoveCommand}" CommandParameter="{Binding Model}">
-                                
-                                <Image Source="./Resources/Icons/bin.png"/>
-                            </Button>
-                        </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>-->
+          <ListBox Background="#1D1D1D" ItemsSource="{Binding Palettes}" HorizontalAlignment="Stretch">
+            <ListBox.ItemTemplate>
+              <DataTemplate>
+                <Grid>
+                  <Grid.RowDefinitions>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="auto"/>
+                  </Grid.RowDefinitions>
+                  <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="40"/>
+                    <ColumnDefinition Width="40"/>
+                    <ColumnDefinition Width="40"/>
+                  </Grid.ColumnDefinitions>
+                  <TextBlock Text="{Binding Name}" FontWeight="Bold" Foreground="White" Grid.ColumnSpan="4"/>
+                  <TextBlock Text="{Binding Path}" Foreground="Gray" Grid.ColumnSpan="4" Grid.Row="1"/>
+                  <Image Source="{Binding BitmapImage}" Grid.Row="2"/>
+                  <Button Grid.Column="1" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding SelectCommand}" CommandParameter="{Binding Model}">
+
+                    <Image Source="avares://Pixed/Resources/Icons/checkmark.png"/>
+                  </Button>
+                  <Button Grid.Column="2" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding RenameCommand}" CommandParameter="{Binding Model}">
+
+                    <Image Source="avares://Pixed/Resources/Icons/common/pencil.png"/>
+                  </Button>
+                  <Button Grid.Column="3" Grid.Row="2" BorderThickness="0" Background="Transparent" Command="{Binding RemoveCommand}" CommandParameter="{Binding Model}">
+
+                    <Image Source="avares://Pixed/Resources/Icons/bin.png"/>
+                  </Button>
+                </Grid>
+              </DataTemplate>
+            </ListBox.ItemTemplate>
+          </ListBox>
         </ScrollViewer>
     </Grid>
 </Window>
