--- a/Pixed/ControlThemes.axaml
+++ b/Pixed/ControlThemes.axaml
@@ -4,13 +4,13 @@
     <Border Padding="20">
       <StackPanel Spacing="10">
         <RadioButton>
-          <Image Source="avares://Pixed/Resources/Icons/common/arrow-left.png" Width="40" Height="40"/>
+          <Image Source="avares://Pixed/Resources/Icons/arrow-left.png" Width="40" Height="40"/>
         </RadioButton>
       </StackPanel>
     </Border>
   </Design.PreviewWith>
-  <ControlTheme x:Key="LayersButton" TargetType="Button">
-    <Setter Property="Background" Value="{StaticResource ButtonBackground}"/>
+  <ControlTheme x:Key="BaseButton" TargetType="Button">
+    <Setter Property="Background" Value="Transparent"/>
     <Setter Property="BorderBrush" Value="{StaticResource BaseBorder}"/>
     <Setter Property="BorderThickness" Value="0, 1, 0, 0"/>
     <Setter Property="Template">
@@ -23,43 +23,10 @@
       </Setter.Value>
     </Setter>
     <Style Selector="^:pointerover">
-      <Setter Property="Background" Value="{StaticResource BaseBorder}"/>
+      <Setter Property="Background" Value="{StaticResource BaseBackgroundHover}"/>
     </Style>
-  </ControlTheme>
-  <ControlTheme x:Key="FramesButton" TargetType="Button">
-    <Setter Property="Background" Value="{StaticResource ButtonBackground}"/>
-    <Setter Property="BorderBrush" Value="{StaticResource BaseBorder}"/>
-    <Setter Property="BorderThickness" Value="0, 1, 0, 0"/>
-    <Setter Property="Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="{x:Type Button}">
-          <Border Background="{TemplateBinding Background}">
-            <ContentPresenter Name="PART_ContentPresenter" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-          </Border>
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
-    <Style Selector="^:pointerover">
-      <Setter Property="Background" Value="{StaticResource BaseBorder}"/>
-    </Style>
-  </ControlTheme>
-  <ControlTheme x:Key="CreateFrameButton" TargetType="Button">
-    <Setter Property="Background" Value="{StaticResource BaseBorder}"/>
-    <Setter Property="BorderBrush" Value="{StaticResource ButtonBorder}"/>
-    <Setter Property="BorderThickness" Value="2"/>
-    <Setter Property="Margin" Value="0, 8, 0, 0"/>
-    <Setter Property="FontSize" Value="13"/>
-    <Setter Property="Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="{x:Type Button}">
-          <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Margin="{TemplateBinding Margin}">
-            <ContentPresenter Name="PART_ContentPresenter" Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-          </Border>
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
-    <Style Selector="^:pointerover">
-      <Setter Property="BorderBrush" Value="{StaticResource Accent}"/>
+    <Style Selector="^:disabled">
+      <Setter Property="Opacity" Value="0.5" />
     </Style>
   </ControlTheme>
   <ControlTheme x:Key="ToolButton" TargetType="Button">
@@ -87,15 +54,11 @@
     </Setter>
   </ControlTheme>
   <ControlTheme x:Key="ToolRadio" TargetType="RadioButton">
-    <Style Selector="^:checked">
-      <Setter Property="BorderBrush" Value="{StaticResource Accent}"/>
-    </Style>
-
     <Setter Property="Width" Value="46"/>
     <Setter Property="Height" Value="46"/>
     <Setter Property="BorderThickness" Value="3"/>
-    <Setter Property="Background" Value="{StaticResource ButtonBackground}"/>
-    <Setter Property="BorderBrush" Value="{StaticResource ButtonBackground}"/>
+    <Setter Property="Background" Value="Transparent"/>
+    <Setter Property="BorderBrush" Value="Transparent"/>
     <Setter Property="Template">
       <ControlTemplate TargetType="RadioButton">
         <Border BorderThickness="{TemplateBinding BorderThickness}"
@@ -113,5 +76,121 @@
         </Border>
       </ControlTemplate>
     </Setter>
+    <Style Selector="^:checked">
+      <Setter Property="BorderBrush" Value="{StaticResource Accent}"/>
+    </Style>
+    <Style Selector="^:pointerover">
+      <Setter Property="Background" Value="{StaticResource BaseBackgroundHover}"/>
+    </Style>
+  </ControlTheme>
+  <ControlTheme x:Key="FrameListBoxItem" TargetType="ListBoxItem">
+    <Setter Property="Background" Value="Transparent" />
+    <Setter Property="Margin" Value="0, 4" />
+    <Setter Property="Template">
+      <ControlTemplate>
+        <ContentPresenter Name="PART_ContentPresenter"
+                          Background="{TemplateBinding Background}"
+                          BorderBrush="{TemplateBinding BorderBrush}"
+                          BorderThickness="{TemplateBinding BorderThickness}"
+                          CornerRadius="{TemplateBinding CornerRadius}"
+                          ContentTemplate="{TemplateBinding ContentTemplate}"
+                          Content="{TemplateBinding Content}"
+                          Padding="{TemplateBinding Padding}"
+                          VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                          HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" />
+      </ControlTemplate>
+    </Setter>
+    <Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+      <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListLowBrush}" />
+      <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+    </Style>
+
+    <!--  Pressed State  -->
+    <Style Selector="^:pressed /template/ ContentPresenter#PART_ContentPresenter">
+      <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListMediumBrush}" />
+      <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+    </Style>
+
+    <!--  Selected State  -->
+    <Style Selector="^:selected">
+
+      <Style Selector="^ /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentLowBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+      </Style>
+
+      <!--  Selected Unfocused State  -->
+      <Style Selector="^:not(:focus) /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentLowBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+      </Style>
+
+      <!--  Selected PointerOver State  -->
+      <Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentMediumBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+      </Style>
+
+      <!--  Selected Pressed State  -->
+      <Style Selector="^:pressed /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentHighBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+      </Style>
+    </Style>
+  </ControlTheme>
+  <ControlTheme x:Key="LayersListBoxItem" TargetType="ListBoxItem">
+    <Setter Property="Background" Value="Transparent" />
+    <Setter Property="Padding" Value="4" />
+    <Setter Property="Template">
+      <ControlTemplate>
+        <ContentPresenter Name="PART_ContentPresenter"
+                          Background="{TemplateBinding Background}"
+                          BorderBrush="{TemplateBinding BorderBrush}"
+                          BorderThickness="{TemplateBinding BorderThickness}"
+                          CornerRadius="{TemplateBinding CornerRadius}"
+                          ContentTemplate="{TemplateBinding ContentTemplate}"
+                          Content="{TemplateBinding Content}"
+                          Padding="{TemplateBinding Padding}"
+                          VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                          HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" />
+      </ControlTemplate>
+    </Setter>
+    <Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+      <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListLowBrush}" />
+      <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+    </Style>
+
+    <!--  Pressed State  -->
+    <Style Selector="^:pressed /template/ ContentPresenter#PART_ContentPresenter">
+      <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListMediumBrush}" />
+      <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+    </Style>
+
+    <!--  Selected State  -->
+    <Style Selector="^:selected">
+
+      <Style Selector="^ /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentLowBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+      </Style>
+
+      <!--  Selected Unfocused State  -->
+      <Style Selector="^:not(:focus) /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentLowBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+      </Style>
+
+      <!--  Selected PointerOver State  -->
+      <Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentMediumBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+      </Style>
+
+      <!--  Selected Pressed State  -->
+      <Style Selector="^:pressed /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="{DynamicResource SystemControlHighlightListAccentHighBrush}" />
+        <Setter Property="Foreground" Value="{DynamicResource SystemControlHighlightAltBaseHighBrush}" />
+      </Style>
+    </Style>
   </ControlTheme>
 </ResourceDictionary>
