--- a/Pixed/ControlThemes.axaml
+++ b/Pixed/ControlThemes.axaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					xmlns:controls="clr-namespace:Pixed.Controls;assembly=Pixed">
   <Design.PreviewWith>
     <Border Padding="20">
       <StackPanel Spacing="10">
@@ -193,4 +194,48 @@
       </Style>
     </Style>
   </ControlTheme>
+	<ControlTheme x:Key="{x:Type controls:NoGesturesScrollViewer}" TargetType="{x:Type controls:NoGesturesScrollViewer}">
+		<Setter Property="Background" Value="Transparent" />
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Grid ColumnDefinitions="*,Auto" RowDefinitions="*,Auto">
+					<ScrollContentPresenter Name="PART_ContentPresenter"
+											Grid.Row="0"
+											Grid.Column="0"
+											Background="{TemplateBinding Background}"
+											HorizontalSnapPointsType="{TemplateBinding HorizontalSnapPointsType}"
+											VerticalSnapPointsType="{TemplateBinding VerticalSnapPointsType}"
+											HorizontalSnapPointsAlignment="{TemplateBinding HorizontalSnapPointsAlignment}"
+											VerticalSnapPointsAlignment="{TemplateBinding VerticalSnapPointsAlignment}"
+											Padding="{TemplateBinding Padding}"
+											ScrollViewer.IsScrollInertiaEnabled="{TemplateBinding IsScrollInertiaEnabled}">
+					</ScrollContentPresenter>
+					<ScrollBar Name="PART_HorizontalScrollBar"
+							   Orientation="Horizontal"
+							   Grid.Row="1"/>
+					<ScrollBar Name="PART_VerticalScrollBar"
+							   Orientation="Vertical"
+							   Grid.Column="1"/>
+					<Panel x:Name="PART_ScrollBarsSeparator"
+						   Grid.Row="1"
+						   Grid.Column="1"
+						   Background="{DynamicResource ScrollViewerScrollBarsSeparatorBackground}"
+						   Opacity="0">
+						<Panel.Transitions>
+							<Transitions>
+								<DoubleTransition Property="Opacity" Duration="0:0:0.1" />
+							</Transitions>
+						</Panel.Transitions>
+					</Panel>
+				</Grid>
+			</ControlTemplate>
+		</Setter>
+		<Style Selector="^[IsExpanded=true] /template/ Panel#PART_ScrollBarsSeparator">
+			<Setter Property="Opacity" Value="1" />
+		</Style>
+		<Style Selector="^[AllowAutoHide=True] /template/ ScrollContentPresenter#PART_ContentPresenter">
+			<Setter Property="Grid.ColumnSpan" Value="2" />
+			<Setter Property="Grid.RowSpan" Value="2" />
+		</Style>
+	</ControlTheme>
 </ResourceDictionary>
