--- a/Pixed/Controls/PaintCanvas.axaml
+++ b/Pixed/Controls/PaintCanvas.axaml
@@ -3,16 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Pixed.Controls" 
+             xmlns:local="clr-namespace:Pixed.Controls"
+			 xmlns:controls="clr-namespace:Pixed.Controls"
              xmlns:viewmodels="clr-namespace:Pixed.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
         <viewmodels:PaintCanvasViewModel/>
     </UserControl.DataContext>
-    <ScrollViewer 
+    <controls:NoGesturesScrollViewer 
     x:Name="scrollView"
-    VerticalScrollBarVisibility="Auto" 
+    VerticalScrollBarVisibility="Auto"
+	Theme="{StaticResource PaintCanvasScrollViewer}"
     HorizontalScrollBarVisibility="Auto">
         <Grid Name="imageGrid" Width="{Binding GridWidth, Mode=TwoWay}" Height="{Binding GridHeight, Mode=TwoWay}">
             <Grid.Background>
@@ -25,8 +27,8 @@
 					PointerExited="Border_PointerExited"
 					PointerMoved="Border_PointerMoved"
 					PointerPressed="Border_PointerPressed" 
-					PointerReleased="Border_PointerReleased" 
+					PointerReleased="Border_PointerReleased"
 					PointerWheelChanged="Border_PointerWheelChanged"/>
         </Grid>
-    </ScrollViewer>
+    </controls:NoGesturesScrollViewer>
 </UserControl>
