--- a/Pixed/Windows/MainWindow.axaml
+++ b/Pixed/Windows/MainWindow.axaml
@@ -63,7 +63,7 @@
             <controls:PaintCanvas Grid.Row="1" x:Name="paintCanvas"/>
           </Grid>
 
-          <ScrollViewer Grid.Column="4" Width="242" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
+          <ScrollViewer Grid.Column="4" Width="242" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto" Theme="{StaticResource HandledFixScrollViewer}">
             <StackPanel Name="rightPanel" Grid.Column="4" Width="242" HorizontalAlignment="Stretch">
               <mainsections:PaletteSection/>
               <mainsections:LayersSection/>
